--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17312388575"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-17312388575');
-</script>
-
-
-    <meta charset="UTF-8" />
+<meta charset="UTF-8" />
     <link rel="icon" type="/image/png" href="/images/trusty favicon.png" />
 
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 
-    <meta name="theme-color" content="#FDB813" />
-    <title>Trustyyellowcabs - Coimbatore Taxi Service</title>
+    <meta name="theme-color" content="#FF6467" />
+    <title>FastPointCab - Taxi Service</title>
     <!-- Modern, clean font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,15 +26,15 @@
             },
             colors: {
               brand: {
-                yellow: '#FDB813',
-                dark: '#020617',
-                slate: '#0f172a',
-                cloud: '#F8FAFC',
+                yellow: '#FF6467',
+                dark: '#FF6467',
+                slate: '#FF6467',
+                cloud: '#FF6467',
               },
               yellow: {
-                400: '#FDB813',
-                500: '#E2A411',
-                600: '#C78F0F',
+                400: '#FF6467',
+                500: '#FF6467',
+                600: '#FF6467',
               }
             },
             animation: {
@@ -93,10 +80,11 @@
                 '8%': { transform: 'rotate(8deg) scale(1.1)' },
                 '10%': { transform: 'rotate(0) scale(1)' },
               },
-              glowFlow: {
-                '0%, 100%': { boxShadow: '0 0 10px rgba(253, 184, 19, 0.3)', filter: 'brightness(1)' },
-                '50%': { boxShadow: '0 0 30px rgba(253, 184, 19, 0.6)', filter: 'brightness(1.1)' },
-              },
+             glowFlow: {
+  '0%, 100%': { boxShadow: '0 0 10px rgba(255,100,103,0.3)', filter: 'brightness(1)' },
+  '50%': { boxShadow: '0 0 30px rgba(255,100,103,0.6)', filter: 'brightness(1.1)' },
+},
+
               ringVibrate: {
                 '0%, 70%, 100%': { transform: 'rotate(0deg) scale(1)' },
                 '72%, 76%, 80%, 84%, 88%': { transform: 'rotate(-12deg) scale(1.05)' },
