--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
     <meta name="theme-color" content="#FF6467" />
     <title>FastPointCab - Taxi Service</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17693607921"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17693607921');
+</script>
     <!-- Modern, clean font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
